--- a/package.json
+++ b/package.json
@@ -1,12 +1,30 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.3",
     "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
-    "pg": "^8.11.5",
+    "handlebars": "^4.7.8",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.3"
+  },
+  "name": "triviosa",
+  "version": "1.0.0",
+  "description": "Project 2. Trivia Application",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
-                          
