--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "connect-session-sequelize": "^7.1.7",
-    "dotenv": "^16.4.5",
-    "express-handlebars": "^7.1.2",
-    "express-session": "^1.18.0",
-    "pg": "^8.11.5",
-    "sequelize": "^6.37.3"
+    "bcrypt": "^5.0.0",
+    "connect-session-sequelize": "^7.0.4",
+    "dotenv": "^8.2.0",
+    "express": "^4.19.2",
+    "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
+    "pg": "^8.11.3",
+    "sequelize": "^6.3.5"
   }
 }
-                          
