--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "nodemon": "^3.1.3"
   },
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "devStart": "nodemon server.js"
   },
   "name": "clear",
   "description": "Project 2. Trivia Application",
